# DataFest-2025

./: .gitattributes  .gitignore  pyproject.toml
code/: address_join.ipynb  analyze_relationships.py  data_quality_analysis.py  explore_codebook.py  explore_csv_structure.py  geocoding.ipynb  market_analysis.py  population_flow.ipynb  relationship_analysis.py
data/: Cleaned PAD.csv  Data Set and Variable Codebook.xlsx  Inflation Q over Q 2019-2024.csv  address_info.csv  growth_rates.csv  market_locations.csv
data/irs/: la_countyoutflow_geocoded_1819.csv  la_countyoutflow_geocoded_1920.csv  la_countyoutflow_geocoded_2021.csv  la_countyoutflow_geocoded_2122.csv
visualizations/: adj_space_utilization.py  adj_space_utilization_bar_creator.py  occupancy_line_chart.py  relative_direct_rents.py  relative_sublet_rents.py  space_utilization_and_rent_trends.py  space_utilization_bar_creator.py
